# TsaoSciResearcher

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  README_EN.md  SECURITY.md  SHA256SUMS  SKILL.md  THIRD_PARTY.md  install.ps1  install.py  install.sh  manifest.json  pyproject.toml  requirements-dev.txt  router_rules.json
.bootstrap/: part-000.txt  part-001.txt  part-002.txt  part-003.txt  part-004.txt
.github/: PULL_REQUEST_TEMPLATE.md  audit-harden-status.json  audit-harden-trigger  current-quality-diagnose.trigger  current-quality-diagnostic.json  current-tree-report-trigger  current-v052-diagnose-trigger  current-v052-diagnostics.json  dashboard-ruff-diagnostics.txt  diagnose-dashboard-ruff-trigger  final-clean.trigger  final-v052-once-result.json  final-v052-once-trigger  finalization-status.json  finalize-current-tree-pdf.status.json  finalize-current-tree-pdf.trigger  finalize-dashboard-ci-enforcement-trigger  finalize-test-dashboard-status.json  finalize-test-dashboard-trigger  finalize-test-dashboard-v2-trigger  finalize-v052  fix-dashboard-source-trigger  format-v052-tests-trigger  patch-dashboard-publisher-trigger  publish-dashboard-candidate-status.json  publish-dashboard-candidate-trigger  publish-dashboard-enforcement-status.json  publish-dashboard-enforcement-trigger  readme-audit.patch.xz  regression-diagnostics.json  revalidate-main-readme.trigger  tsao-v053-integration-status.json  v053-audit-diagnose-trigger  v053-audit-result.json  v053-finalize-status.json  v053-finalize-trigger  v053-static-diagnose-trigger  v053-static-fix-trigger  v053-static-result-trigger  v053-static-result.json  (+9 more)
.single-main-delta/: chunk-000  chunk-001  chunk-002  chunk-003  chunk-004  chunk-005  chunk-006  chunk-007  chunk-008  manifest.json
.single-main-payload/: manifest.json
.single-main-status/: 29819163933.json  29819346952.json  29819417268.json  29819602751.json  29819925475.json  29820076557.json
.tsao-research/: ci-trigger.txt
.v050-payload/: part-00.txt  part-01.txt  part-02.txt  part-03.txt  part-04.txt  part-05.txt  tailb64-00.txt  tailb64-01.txt  tailb64-02.txt  tailb64-03.txt  tailb64-04.txt
agents/: openai.yaml
capability-index/: ai-ml-research-01.json  ai-ml-research-02.json  ai-ml-research-03.json  biomedical-research-01.json  biomedical-research-02.json  biomedical-research-03.json  capabilities.csv  capabilities.json  capabilities.md  data-statistics-visualization-01.json  data-statistics-visualization-02.json  data-statistics-visualization-03.json  governance-patent-integrity-01.json  governance-patent-integrity-02.json  governance-patent-integrity-03.json  laboratory-instrumentation-01.json  laboratory-instrumentation-02.json  laboratory-instrumentation-03.json  literature-knowledge-01.json  literature-knowledge-02.json  literature-knowledge-03.json  research-orchestration-01.json  research-orchestration-02.json  research-orchestration-03.json  stats.json  writing-publication-01.json  writing-publication-02.json  writing-publication-03.json
dist-a/: TsaoSciResearcher-v0.5.3.zip.sha256
dist-b/: TsaoSciResearcher-v0.5.3.zip.sha256
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_V040.md  CAPABILITY_COVERAGE_MATRIX.md  CAPABILITY_MODEL.md  (+18 more)
(+334 files in other folders)
