[project]
name = "tsao-sci-researcher"
version = "0.3.0"
description = "Evidence-first full-lifecycle scientific research Agent Skill"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "SUNHAOJUN22"}]
dependencies = ["PyYAML>=6.0", "jsonschema>=4.18"]

[project.optional-dependencies]
plot = ["matplotlib>=3.7", "numpy>=1.24"]
test = ["pytest>=8.0"]

[project.urls]
Repository = "https://github.com/SUNHAOJUN22/TsaoSciResearcher"
Issues = "https://github.com/SUNHAOJUN22/TsaoSciResearcher/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
